force-app/main/default/objects/copado__Selenium_Test_Case_Per_Suite__c/fields/copado__Order__c.field-meta.xml
<CustomField>
    <fullName>copado__Order__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>