force-app/main/default/objects/copado__Selenium_Test_Case_Per_Suite__c/fields/copado__Selenium_Test_Case__c.field-meta.xml
<CustomField>
    <fullName>copado__Selenium_Test_Case__c</fullName>
    <label>Selenium Test Case</label>
    <referenceTo>copado__Selenium_Test_Case__c</referenceTo>
    <relationshipLabel>Selenium Test Cases per Suite</relationshipLabel>
    <relationshipName>Selenium_Test_Cases_Per_Suite</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>