force-app/main/default/objects/copado__Selenium_Test_Case_Per_Suite__c/fields/copado__Selenium_Test_Suite__c.field-meta.xml
<CustomField>
    <fullName>copado__Selenium_Test_Suite__c</fullName>
    <label>Selenium Test Suite</label>
    <referenceTo>copado__Selenium_Test_Suite__c</referenceTo>
    <relationshipLabel>Test Cases</relationshipLabel>
    <relationshipName>Selenium_Test_Cases_Per_Suite</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>