force-app/main/default/objects/copado__Selenium_Test_Case_Per_Suite__c/fields/copado__Test_Dataset_Name__c.field-meta.xml
<CustomField>
    <fullName>copado__Test_Dataset_Name__c</fullName>
    <description>Attachment ID of the selected dataset in the testdata</description>
    <label>Test Dataset Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>